Fix embedding debug symbols into the nupkg (byebye snupkg) - and loading pdbs

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<Deterministic>true</Deterministic>
 		<AllowUnsafeBlocks>False</AllowUnsafeBlocks>
-		<DebugType>full</DebugType>
+		<DebugType>portable</DebugType>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 
 		<CopyToLibraries Condition="'$(CopyToLibraries)'==''">true</CopyToLibraries>
