--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,11 +12,12 @@
 		<CopyToLibraries Condition="'$(CopyToLibraries)'==''">true</CopyToLibraries>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(ResonitePath)'==''">
-		<ResonitePath>$(MSBuildThisFileDirectory)Resonite</ResonitePath>
-		<ResonitePath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\Resonite\')">C:\Program Files (x86)\Steam\steamapps\common\Resonite</ResonitePath>
-		<ResonitePath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/Resonite/')">$(HOME)/.steam/steam/steamapps/common/Resonite</ResonitePath>
-		<ResonitePath Condition="Exists('D:/Files/Games/Resonite/app/')">D:/Files/Games/Resonite/app</ResonitePath>
+	<PropertyGroup Condition="'$(GamePath)'==''">
+		<GamePath>$(MSBuildThisFileDirectory)Game</GamePath>
+		<!-- These should eventually be removed & moved to uncommitted user prefs -->
+		<GamePath Condition="Exists('C:\Program Files (x86)\Steam\steamapps\common\Resonite\')">C:\Program Files (x86)\Steam\steamapps\common\Resonite</GamePath>
+		<GamePath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/Resonite/')">$(HOME)/.steam/steam/steamapps/common/Resonite</GamePath>
+		<GamePath Condition="Exists('D:/Files/Games/Resonite/app/')">D:/Files/Games/Resonite/app</GamePath>
 	</PropertyGroup>
 
 </Project>
