--- a/MonkeyLoader/MonkeyLoader.csproj
+++ b/MonkeyLoader/MonkeyLoader.csproj
@@ -29,8 +29,7 @@
   
   <Target Name="AddSymbolsToPackage">
     <ItemGroup>
-      <TfmSpecificPackageFile Include="$(OutDir)$(AssemblyName).pdb"
-        PackagePath="lib/$(TargetFramework)/" />
+      <TfmSpecificPackageFile Include="$(OutDir)$(AssemblyName).pdb" PackagePath="lib/$(TargetFramework)/" />
     </ItemGroup>
   </Target>
   
@@ -50,15 +49,11 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(CopyToLibraries)'=='true'">
-    <Copy SourceFiles="$(TargetDir)$(TargetFileName)"
-      DestinationFiles="$(GamePath)/MonkeyLoader/$(AssemblyFileName)" />
-    <Message Text="Copied $(TargetFileName) to $(GamePath)/MonkeyLoader/$(AssemblyFileName)"
-      Importance="high" />
+    <Copy SourceFiles="$(TargetDir)$(TargetFileName)" DestinationFiles="$(GamePath)/MonkeyLoader/$(AssemblyFileName)" />
+    <Message Text="Copied $(TargetFileName) to $(GamePath)/MonkeyLoader/$(AssemblyFileName)" Importance="high" />
 
-    <Copy SourceFiles="$(TargetDir)$(TargetName).pdb"
-      DestinationFiles="$(GamePath)/MonkeyLoader/$(TargetName).pdb" />
-    <Message Text="Copied $(TargetName).pdb to $(GamePath)/MonkeyLoader/$(TargetName).pdb"
-      Importance="high" />
+    <Copy SourceFiles="$(TargetDir)$(TargetName).pdb" DestinationFiles="$(GamePath)/MonkeyLoader/$(TargetName).pdb" />
+    <Message Text="Copied $(TargetName).pdb to $(GamePath)/MonkeyLoader/$(TargetName).pdb" Importance="high" />
   </Target>
 
   <Target Name="CreateZip" AfterTargets="Build">
@@ -71,16 +66,10 @@
     </ItemGroup>
 
     <RemoveDir Directories="$(ZipCreationFolder)" />
-    <MakeDir
-      Directories="$(ZipCreationFolder);$(ZipCreationFolder)/MonkeyLoader;$(ZipCreationFolder)/MonkeyLoader/Configs;$(ZipCreationFolder)/MonkeyLoader/GamePacks;$(ZipCreationFolder)/MonkeyLoader/Libs;$(ZipCreationFolder)/MonkeyLoader/Mods;$(ZipCreationFolder)/MonkeyLoader/PatchedAssemblies" />
-    <Copy SourceFiles="@(ZipSourceFiles)"
-      DestinationFolder="$(ZipCreationFolder)/MonkeyLoader/" />
-    <Copy SourceFiles="@(ZipVendorFiles)"
-      DestinationFolder="$(ZipCreationFolder)/%(RecursiveDir)" />
-    <ZipDirectory
-      SourceDirectory="$(ZipCreationFolder)"
-      Overwrite="true"
-      DestinationFile="$(BaseOutputPath)\MonkeyLoader-v$(Version)-$(Configuration).zip" />
+    <MakeDir Directories="$(ZipCreationFolder);$(ZipCreationFolder)/MonkeyLoader;$(ZipCreationFolder)/MonkeyLoader/Configs;$(ZipCreationFolder)/MonkeyLoader/GamePacks;$(ZipCreationFolder)/MonkeyLoader/Libs;$(ZipCreationFolder)/MonkeyLoader/Mods;$(ZipCreationFolder)/MonkeyLoader/PatchedAssemblies" />
+    <Copy SourceFiles="@(ZipSourceFiles)" DestinationFolder="$(ZipCreationFolder)/MonkeyLoader/" />
+    <Copy SourceFiles="@(ZipVendorFiles)" DestinationFolder="$(ZipCreationFolder)/%(RecursiveDir)" />
+    <ZipDirectory SourceDirectory="$(ZipCreationFolder)" Overwrite="true" DestinationFile="$(BaseOutputPath)\MonkeyLoader-v$(Version)-$(Configuration).zip" />
   </Target>
 
   <ItemGroup>
@@ -104,8 +93,7 @@
     <PackageReference Include="System.ValueTuple" Version="4.5.0">
       <Private>True</Private>
     </PackageReference>
-    <PackageReference Include="Zio" Version="0.17.0" ExcludeAssets="compile; build; runtime; native"
-      GeneratePathProperty="true">
+    <PackageReference Include="Zio" Version="0.17.0" ExcludeAssets="compile; build; runtime; native" GeneratePathProperty="true">
       <Private>True</Private>
     </PackageReference>
     <!--<ProjectReference Include="..\MonkeyLoader.CodeGenerators\MonkeyLoader.CodeGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
@@ -121,9 +109,7 @@
   <!-- Remove `System.*` DLLs from the output folder -->
   <Target Name="ClearReferenceCopyLocalPaths" AfterTargets="ResolveAssemblyReferences">
     <ItemGroup>
-      <RemoveRefCopy Include="@(ReferenceCopyLocalPaths)"
-        Condition="$([System.String]::Copy(&quot;%(ReferenceCopyLocalPaths.Filename)&quot;).StartsWith('System'))"
-      />
+      <RemoveRefCopy Include="@(ReferenceCopyLocalPaths)" Condition="$([System.String]::Copy(&quot;%(ReferenceCopyLocalPaths.Filename)&quot;).StartsWith('System'))" />
       <ReferenceCopyLocalPaths Remove="@(RemoveRefCopy)" />
     </ItemGroup>
   </Target>
