--- a/MonkeyLoader/MonkeyLoader.csproj
+++ b/MonkeyLoader/MonkeyLoader.csproj
@@ -11,7 +11,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MonkeyLoader</Title>
     <Authors>Banane9</Authors>
-    <Version>0.20.1-beta</Version>
+    <Version>0.21.0-beta</Version>
     <Description>A convenience and extendability focused mod loader using NuGet packages.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
@@ -74,18 +74,10 @@
 
   <ItemGroup>
     <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
-    <PackageReference Include="Lib.Harmony.Thin" Version="2.3.3">
-      <Private>True</Private>
-    </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3">
-      <Private>False</Private>
-    </PackageReference>
-    <PackageReference Include="NuGet.Packaging" Version="6.10.1">
-      <Private>True</Private>
-    </PackageReference>
-    <PackageReference Include="NuGet.Protocol" Version="6.10.1">
-      <Private>True</Private>
-    </PackageReference>
+    <PackageReference Include="Lib.Harmony.Thin" Version="2.3.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NuGet.Packaging" Version="6.10.1" />
+    <PackageReference Include="NuGet.Protocol" Version="6.10.1" />
     <PackageReference Include="PolySharp" Version="1.14.1">
       <Private>False</Private>
       <PrivateAssets>all</PrivateAssets>
@@ -93,12 +85,8 @@
     </PackageReference>
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
     <PackageReference Include="System.Text.Json" Version="8.0.4" />
-    <PackageReference Include="System.ValueTuple" Version="4.5.0">
-      <Private>True</Private>
-    </PackageReference>
-    <PackageReference Include="Zio" Version="0.19.1">
-      <Private>True</Private>
-    </PackageReference>
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+    <PackageReference Include="Zio" Version="0.19.2" />
     <!--<ProjectReference Include="..\MonkeyLoader.CodeGenerators\MonkeyLoader.CodeGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
   </ItemGroup>
 
