Tweak console host connection

--- a/MonkeyLoader.ConsoleHost/MonkeyLoader.ConsoleHost.csproj
+++ b/MonkeyLoader.ConsoleHost/MonkeyLoader.ConsoleHost.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DebugType>embedded</DebugType>
+    <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+    <GenerateDocumentationFile>False</GenerateDocumentationFile>
+    <OutDir>../MonkeyLoader/vendor/MonkeyLoader/Tools/ConsoleHost</OutDir>
   </PropertyGroup>
 
 </Project>
