--- a/.gitignore
+++ b/.gitignore
@@ -368,4 +368,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+# ConsoleHost is built from source
 /MonkeyLoader/vendor/MonkeyLoader/Tools/ConsoleHost
