Fix color printing and launch of ConsoleHost

--- a/MonkeyLoader.ConsoleHost/MonkeyLoader.ConsoleHost.csproj
+++ b/MonkeyLoader.ConsoleHost/MonkeyLoader.ConsoleHost.csproj
@@ -9,6 +9,7 @@
     <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
     <OutDir>../MonkeyLoader/vendor/MonkeyLoader/Tools/ConsoleHost</OutDir>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 </Project>
