--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,18 +12,19 @@
     <CopyToLibraries Condition="'$(CopyToLibraries)'==''">true</CopyToLibraries>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(GamePath)'==''">
-    <GamePath>$(MSBuildThisFileDirectory)Game</GamePath>
-  </PropertyGroup>
-
   <PropertyGroup Condition="'$(ResonitePath)'==''">
     <ResonitePath>$(MSBuildThisFileDirectory)Resonite</ResonitePath>
     <ResonitePath Condition="Exists('C:/Program Files (x86)/Steam/steamapps/common/Resonite/')">C:/Program Files (x86)/Steam/steamapps/common/Resonite</ResonitePath>
     <ResonitePath Condition="Exists('$(HOME)/.steam/steam/steamapps/common/Resonite/')">$(HOME)/.steam/steam/steamapps/common/Resonite</ResonitePath>
     <ResonitePath Condition="Exists('D:/Files/Games/Resonite/app/')">D:/Files/Games/Resonite/app</ResonitePath>
     <ResonitePath Condition="Exists('G:/SteamLibrary/steamapps/common/Resonite/')">G:/SteamLibrary/steamapps/common/Resonite</ResonitePath>
+	  <ResonitePath Condition="Exists('D:/SteamLibrary/steamapps/common/Resonite')">D:/SteamLibrary/steamapps/common/Resonite</ResonitePath>
   </PropertyGroup>
-
+	
+  <PropertyGroup Condition="'$(GamePath)'==''">
+    <GamePath>$(ResonitePath)</GamePath>
+  </PropertyGroup>
+	
   <PropertyGroup Condition="'$(ResoniteCachePath)' == ''">
     <ResoniteCachePath Condition="Exists('S:/Resonite/')">S:/Resonite/</ResoniteCachePath>
   </PropertyGroup>
