--- a/MonkeyLoader/Properties/launchSettings.json
+++ b/MonkeyLoader/Properties/launchSettings.json
@@ -5,14 +5,14 @@
     },
     "Resonite": {
       "commandName": "Executable",
-      "executablePath": "$(ResonitePath)/Resonite.exe",
-      "commandLineArgs": "-donotautoloadhome",
+      "executablePath": "$(ResonitePath)\\Renderite.Host.exe",
+      "commandLineArgs": "-Screen -DoNotAutoLoadHome",
       "workingDirectory": "$(ResonitePath)"
     },
     "Resonite (Override Cache)": {
       "commandName": "Executable",
-      "executablePath": "$(ResonitePath)/Resonite.exe",
-      "commandLineArgs": "-donotautoloadhome -CachePath \"$(ResoniteCachePath)\"",
+      "executablePath": "$(ResonitePath)\\Renderite.Host.exe",
+      "commandLineArgs": "-Screen -DoNotAutoLoadHome -DataPath \"$(ResoniteDataPath)\" -CachePath \"$(ResoniteCachePath)\"",
       "workingDirectory": "$(ResonitePath)"
     }
   }
