--- a/MonkeyLoader/MonkeyLoader.csproj
+++ b/MonkeyLoader/MonkeyLoader.csproj
@@ -1,18 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyTitle>MonkeyLoader</AssemblyTitle>
-    <TargetFrameworks>net9.0;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net462;net5.0;net6.0;net7.0;net8.0;net9.0;net10.0;netstandard2.0</TargetFrameworks>
     <AssemblyFileName>$(AssemblyTitle).dll</AssemblyFileName>
     <Deterministic>True</Deterministic>
     <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    
+    <!-- Create reference Assemblies instead of a full assembly -->
+    <ProduceOnlyReferenceAssembly Condition="'$(TargetFramework)' == 'netstandard2.0'">true</ProduceOnlyReferenceAssembly>
+    <IncludeBuildOutput Condition="'$(TargetFramework)' == 'netstandard2.0'">false</IncludeBuildOutput>
   </PropertyGroup>
 
   <PropertyGroup>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>MonkeyLoader</Title>
     <Authors>Banane9</Authors>
-    <Version>0.27.2-beta</Version>
+    <Version>0.28.0-beta</Version>
     <Description>A convenience and extendability focused mod loader using NuGet packages.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseExpression>LGPL-3.0-or-later</PackageLicenseExpression>
@@ -25,12 +29,14 @@
     <IncludeSymbols>False</IncludeSymbols>
     <EmbedAllSources>True</EmbedAllSources>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);AddSymbolsToPackage</TargetsForTfmSpecificContentInPackage>
+    
+    <TargetsForTfmSpecificContentInPackage Condition="'$(ProduceOnlyReferenceAssembly)' == 'true'">$(TargetsForTfmSpecificContentInPackage);AddToPackageAsRef</TargetsForTfmSpecificContentInPackage>
   </PropertyGroup>
-  
-  <Target Name="AddSymbolsToPackage">
+    
+  <Target Name="AddToPackageAsRef">
     <ItemGroup>
-      <TfmSpecificPackageFile Include="$(OutDir)$(AssemblyName).pdb" PackagePath="lib/$(TargetFramework)/" />
+      <TfmSpecificPackageFile Include="$(OutDir)$(AssemblyName).*" PackagePath="ref/$(TargetFramework)/" />
+      <TfmSpecificPackageFile Remove="$(OutDir)$(AssemblyName).deps.json" />
     </ItemGroup>
   </Target>
   
@@ -75,27 +81,37 @@
     <Copy SourceFiles="@(ZipFrameworkDependentFiles)" DestinationFolder="$(ZipCreationFolder)/MonkeyLoader/" />
     <ZipDirectory SourceDirectory="$(ZipCreationFolder)" Overwrite="true" DestinationFile="$(BaseOutputPath)\MonkeyLoader-$(TargetFramework)-v$(Version)-$(Configuration).zip" />
   </Target>
-	
+  
   <ItemGroup>
     <PackageReference Include="Ben.Demystifier" Version="0.4.1" />
     <PackageReference Include="EnumerableToolkit.Builder" Version="2.0.2" />
     <PackageReference Include="EnumerableToolkit.Builder.Async" Version="2.0.2" />
-    <PackageReference Include="Lib.Harmony.Thin" Version="2.4.0" />
+    <PackageReference Include="Lib.Harmony.Thin" Version="2.4.2" />
     <PackageReference Include="MicroUtils.HarmonyAnalyzers" Version="1.6.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     <PackageReference Include="NuGet.Protocol" Version="6.14.0" />
     <PackageReference Include="PolySharp" Version="1.15.0">
       <Private>False</Private>
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="System.Text.Json" Version="9.0.1" />
     <PackageReference Include="System.ValueTuple" Version="4.6.1" />
-    <PackageReference Include="Zio" Version="0.21.0" />
+    <PackageReference Include="Zio" Version="0.21.3" />
     <!--<ProjectReference Include="..\MonkeyLoader.CodeGenerators\MonkeyLoader.CodeGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
+
+    <PackageReference Condition="'$(TargetFramework)' == 'netstandard2.0' OR '$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'net5.0'" Include="Microsoft.Bcl.AsyncInterfaces" Version="10.0.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <!-- Upgrade to appropriate System.Text.Json reference for each framework -->
+    <PackageReference Condition="'$(TargetFramework)' == 'net7.0'" Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net8.0'" Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net9.0'" Include="System.Text.Json" Version="9.0.1" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net10.0'" Include="System.Text.Json" Version="10.0.0" />
+    <PackageReference Condition="'$(TargetFramework)' == 'net462' OR '$(TargetFramework)' == 'netstandard2.0'" Include="System.Text.Json" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
